home screen done

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Which Animal?</title>
+    <title>Animal Lookalike</title>
   </head>
   <body id = "main">
     <noscript>You need to enable JavaScript to run this app.</noscript>
